--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Practice",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "build": "echo 'no build step necessary'"
   },
   "author": "Talha Khalid",
   "license": "ISC",
