--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.17.3",
     "google": "^2.1.0",
     "googleapis": "^140.0.1",
+    "helmet": "^7.1.0",
     "method-override": "^3.0.0",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
@@ -32,4 +33,3 @@
     "ejs-lint": "^2.0.0"
   }
 }
-
